--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,11 +1,11 @@
-<h1>Hi! Please confirm your email!</h1>
+<h1>Подтверждение регистрации.</h1>
 
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+    Для подтверждения регистрации перейдите по ссылке: <br><br>
+    <a href="{{ signedUrl }}">Подтвердить email</a>.
+    Эта ссылка будет актуальня {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
 <p>
-    Cheers!
+    Хорошего дня!
 </p>
